fix css of header on small device

--- a/components/ReviewBox/review.module.scss
+++ b/components/ReviewBox/review.module.scss
@@ -6,7 +6,8 @@
 }
 
 .header {
-  width: 30%;
+  width: 50%;
+  max-width: 20rem;
   margin: 1rem auto;
   display: flex;
   justify-content: space-between;
